--- a/test_0528/css/main.css
+++ b/test_0528/css/main.css
@@ -36,6 +36,10 @@ body {
 em {
     font-style: normal;
 }
+/* 항목 표시 동그라미 모양 삭제 명령 */
+li {
+    list-style: none;
+}
 .intro {
     text-align: center;
     margin: 90px 0 90px 0;
@@ -106,4 +110,54 @@ em {
 .overview p strong {
     font-weight: 800;
     text-decoration: underline;
+}
+.color {
+    margin: 0 0 3px 0;
+}
+.color h1 {
+    color: #1d1d1d;
+    font-size: 45px;
+    font-weight: 800;
+    margin: 0 0 3px 0;
+}
+.color h2 {
+    color: #1d1d1d;
+    font-size: 38px;
+    font-weight: 800;
+    margin: 48px 0 23px 0 ;
+}
+.color ul {
+    display:flex;
+    justify-content: space-between;
+}
+.color ul li {
+    width: 190px;
+    height: 210px;
+    color: #fff;
+    padding: 120px 0 0 13px;
+
+}
+.color ul li.blue {
+    background-color: #00507d;
+}
+.color ul li.lb {
+    background-color: #00a5e5;
+}
+.color ul li.dg {
+    background-color: #4b5151;
+}
+.color ul li.lg {
+    background-color: #bcbdbb;
+}
+.color ul li.gold {
+    background-color: #86754e;
+}
+.color ul li.silver {
+    background-color: #8d908f;
+}
+.color ul li h3 {
+    font-size: 18px;
+    font-weight: 800;
+    line-height: 1.1;
+    margin: 0 0 14px 0;
 }
