--- a/test_0529/css/main_flex.css
+++ b/test_0529/css/main_flex.css
@@ -83,3 +83,36 @@ html, body {
     font-size: 45px;
     font-weight: 900
 }
+.reqm h1 {
+    margin: 148px 0 48px 0;
+    color: #1d1d1d;
+    text-align: center;
+    font-size: 45px;
+    font-weight: 900
+}
+.reqm ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.reqm ul li {
+    width: 511px;
+    height: 281px;
+    font-size: 25px;
+    color: #fff;
+    padding: 195px 0 0 32px;
+    border-radius: 20px;
+    margin: 0 12px 24px 12px;
+}
+.reqm ul li:nth-child(1) {
+    background-image: url(../imges/reqm1.png);
+}
+.reqm ul li:nth-child(2) {
+    background-image: url(../imges/reqm2.png);
+}
+.reqm ul li:nth-child(3) {
+    background-image: url(../imges/reqm3.png);
+}
+.reqm ul li:nth-child(4) {
+    background-image: url(../imges/reqm4.png);
+}
