--- a/Chinhung/css/default.css
+++ b/Chinhung/css/default.css
@@ -12,7 +12,7 @@ h1, h2, h3, h4, h5 ,h6, strong {
     font-size: inherit; /* 상위요소에서 정의된대로 상속받도록 하는 명령 */
     font-weight: inherit;
 }
-em { /* 글자 기울임꼴 삭제 명령 */
+em, address { /* 글자 기울임꼴 삭제 명령 */
     font-style: normal;
 }
 a { /* 링크 연결 기능 ; 파란색 언더라인 취소 명령 */
