0531 마우스오버 스타일 연습

--- a/Chinhung/css/main.css
+++ b/Chinhung/css/main.css
@@ -20,7 +20,10 @@ html, body {
     font-weight: 400; /* 글자 두께 */
     line-height: 1.4; /* 행간 */
     letter-spacing: -0.01em; /* 자간 */
-    word-break: normal; /* 단어별로 줄바꿈 */
+    word-break: keep-all; /* 단어별로 줄바꿈 */
+}
+#wrap { /* 홈페이지 전체를 감싸는 요소 */
+    min-width: 1260px;
 }
 .wrapper { /* 홈페이지 넓이 제한, 가운데 정렬 */
     width: 1260px;
