--- a/djbus/css/main.css
+++ b/djbus/css/main.css
@@ -130,11 +130,11 @@ header .gnb ul li a:hover {
     /* 배경보다 promotion 내부의 컨텐츠가 더 긺. 그러면 배경의 위치를 정확하게 줘야함. - 가운데 상단.
     그리고 background-size 주면 안됨. - 디자인한 사이즈대로 들어가야 하니까. */
     background: url(../imges/promotion_bg.png) no-repeat center top;
-    margin: 0 0 200px 0;
+    margin: 0 0 187px 0;
 }
 .promotion .news {
     color: rgba(255, 255, 255, 0.8);
-    padding: 104px 0 128px 0;
+    padding: 104px 0 109px 0;
 }
 .promotion .news .wrapper {
     display: flex;
@@ -161,13 +161,13 @@ header .gnb ul li a:hover {
 .promotion .news .tit p {
     margin: 7px 0 29px 0;
 }
-.promotion .list {
+.promotion .news .list {
     width: 665px;
 }
-.promotion .list ul li {
+.promotion .news .list ul li {
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
-.promotion .list ul li a {
+.promotion .news .list ul li a {
     /* display:flex는 해당 요소를 block 요소로 만들어서 넓이가 100%가 되게 함.
     (display:block을 또 줄 필요 없다는 뜻.(a tag는 inline tag) */
     display: flex;
@@ -175,15 +175,87 @@ header .gnb ul li a:hover {
     align-items: center; /* 위아래 가운데 정렬 명령 */
     padding:  22px 4px 7px 4px;
 }
-.promotion .list ul li a strong {
+.promotion .news .list ul li a strong {
     font-size: 20px;
     color: #fff;
 }
-.promotion .list ul li a:hover strong {
+.promotion .news .list ul li a:hover strong {
     font-weight: 800;
     color: #D8D262;
     /* a tag에 오버했을 때 strong tag는 */
 }
-.promotion .list ul li a span {
+.promotion .news .list ul li a span {
     font-size: 20px;
+}
+.promotion .movie .tit h2 {
+    color: #fff;
+    font-size: 50px;
+    font-weight: 800;
+    margin: 0 0 38px 0;
+}
+.promotion .movie .tit h2 em {
+    color: #D8D262;
+}
+.promotion .movie .list ul {
+    display: flex;
+    justify-content: space-between;
+}
+.promotion .movie .list ul li {
+    width: 396.96px;
+}
+.promotion .movie .list ul li a {
+    display: block;
+    /* a는 인라인태그, 내부에는 block태그.
+     a와 li의 영역 크기를 동일하게 주기 위해 a도 block요소로 만듦. */
+}
+.promotion .movie .list ul li a .photo img {
+    border: 8px solid #52A3F2;
+    /* img에 테두리를 주면 이미지 밖으로 생성됨 */
+    /* img는 감싸는 영역의 크기를 이미지보다 작게해도 이미지가 자동으로 줄어들지 않음. 본인의 사이즈대로 나타남. 
+    글자는 줄바꿈을 함. */
+    width: calc(100% - 16px);
+    /* 화면 100%가 아니라 나를 감싸는 photo의 넓이에 100%을 의미함. 테두리는 별도임.
+    넓이 100%에서 테두리 값을 뺀 넓이를 주면 됨. */
+}
+.promotion .movie .list ul li a h3 {
+    font-size: 18px;
+    font-weight: 800;
+    margin: 8px 0 0 0;
+}
+/* 마우스 오버 
+    스타일 변경대상 요소의 스타일이 정의된 선택자를 그대로 복사해서 붙여넣기.
+    만약에 그냥 body 등 다른 스타일을 상속받은거면 그냥 a에게 스타일을 주면 됨.*/
+    .promotion .movie .list ul li a:hover h3 {
+    color: #0D5FB3;
+}
+
+footer {
+    padding: 53px 0 98px 0;
+    background-color: #2D2D2D;
+    color: rgba(255, 255, 255, 0.6);
+}
+footer .f_nav ul {
+    display: flex;
+}
+footer .f_nav ul li {
+    margin: 0 39px 0 0;
+}
+footer .f_nav ul li.privacy {
+    font-weight: 800;
+}
+footer .f_info {
+    margin: 36px 0 36px 0;
+}
+footer .f_info address {
+    display: inline;
+}
+/* footer .f_info address, span -> 이렇게 쓰면 안됨.
+footer안에 f_info라는 클래스명을 가진 요소 안에 있는 address와 이 html 안의 모든 span이라는 뜻이 되기 때문임. */
+footer .f_info address,
+footer .f_info span {
+    margin: 0 37px 13px 0;
+    display: inline-block; /* address는 블럭태그인데 span 태그와 좌우에 배치되려고, span은 margin을 적용시키려고.. */
+}
+footer .copyright {
+    color: rgba(255, 255, 255, 0.4);
 }
