--- a/cheongsando/css/main.css
+++ b/cheongsando/css/main.css
@@ -298,13 +298,95 @@ header .gnb ul li a:hover {
 .community .news h3 {
     font-size: 18px;
     font-weight: 800;
-    margin: 20px 0 14.8px 0;
+    margin: 20px 0 15px 0;
 }
 .community .news ul li {
     margin: 0 0 22px 0;
-    border-top: 1px solid #fff;
+    border-top: 1px solid rgba(255,255,255,0.2);
+}
+.community .news ul li a {
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 0 0 0;
+}
+.community .news ul li a strong {
+    color: #fff;
+}
+.community .news ul li a:hover strong {
+    font-weight: 800;
+}
+.community .link {
+    width: 242px;
+    margin: 220px 0 0 14px;
+}
+.community .link ul {
+    display: flex;
+    flex-wrap: wrap; /* 두 줄 허용 */
+    gap: 14px;
+}
+.community .link ul li {
+    width: 114px;
+    
+}
+.community .link ul li a {
+    color: #fff;
+    line-height: 1.2;
+    display: block;
+    height: 101px;
+    padding: 17px;
+    background-position: right 15px bottom 15px;
+    background-repeat: no-repeat;
+    background-color: rgba(16,54,84,0.3);
+    border-radius: 20px;
+    backdrop-filter: blur(5px);
+    transition: 0.5s;
+}
+.community .link ul li.link1 a{
+    background-image: url(../imges/community_ico1.svg);
+}
+.community .link ul li.link2 a{
+    background-image: url(../imges/community_ico2.svg);
+}
+.community .link ul li.link3 a{
+    background-image: url(../imges/community_ico3.svg);
+}
+.community .link ul li.link4 a{
+    background-image: url(../imges/community_ico4.svg);
+}
+.community .link ul li a:hover {
+    background-color: #103654;
 }
 
+
 footer {
-    margin-top: 500px;
+    background-color: #222;
+    color: #fff;
+    padding: 71px 0 160px 0;
+}
+footer .wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+footer .f_nav ul {
+    display: flex;
+}
+footer .f_nav ul li {
+    margin-right: 39px;
+}
+footer .f_info {
+    margin: 22px 0 26px 0;
+    display: flex;
+    gap: 39px;
+}
+footer .copyright {
+    color: #666
+}
+footer .familysite button {
+    width: 122px;
+    height: 29px;
+    border: 1px solid #ccc;
+    padding: 0 20px 2px 10px;
+    text-align: left; /* 버튼의 기본을 가운데 - 왼쪽정렬로 변경 */
+    background: url(../imges/family_ico.svg) no-repeat right 11px center;
+    
 }
