--- a/cheongsando/css/main.css
+++ b/cheongsando/css/main.css
@@ -372,6 +372,24 @@ footer .f_nav ul {
 }
 footer .f_nav ul li {
     margin-right: 39px;
+    position: relative; /* ::after 정렬 기준 */
+}
+
+footer .f_nav ul li::after {
+    display: block;
+    content: ""; /* 가상 요소인 before와 after을 쓸 땐 반드시 content가 필요함.
+    지우면 안나옴. */
+    width: 1px;
+    height: 12px;
+    background-color: rgba(255,255,255,0.2);
+    position: absolute; /*각각의 li을 기준으로 정렬 */
+    right: -20px;
+    top: 5px;
+}
+/* li중에 마지막 li의 after */
+footer .f_nav ul li:last-child::after {
+    display: none; /* 숨김 */
+
 }
 footer .f_info {
     margin: 22px 0 26px 0;
