--- a/test_0612/css/common.css
+++ b/test_0612/css/common.css
@@ -6,6 +6,7 @@ html, body {
     line-height: 1.2; /* 배수 - 글자크기에 1.2배 */
     color: #3d3d3d; /* 글자 색상 */
     word-break: keep-all; /* 단어별로 줄바꿈 */
+    word-wrap: break-word; /* 만약 단어가 엄청 길면 강제 줄바꿈 실행 명령 */
 }
 /* 홈페이지의 넓이 제한, 가운데 정렬 기능을 수행함 .*/
 /* 홈페이지 전체를 감싸는 요소 - 가로 스크롤 바가 생겼을 때 배경이 짤리는 현상을 막음 */
