--- a/samsungscholarship/css/main.css
+++ b/samsungscholarship/css/main.css
@@ -112,7 +112,7 @@ header .gnb .gnb_wrap ul li:last-child a::after {
     header .gnb .gnb_wrap ul li:last-child a::after {
         display: none;
     }
-}/*media*/
+}/* header media */
 .visual {
     background: url(../imges/visual_bg.png) no-repeat center center / cover;
     color: #fff;
@@ -149,16 +149,27 @@ header .gnb .gnb_wrap ul li:last-child a::after {
     .visual em {
         font-weight: 500;
     }
-}/*media*/
+}/* visual media */
 
+.biz {
+    margin: 69px 0 0 0;
+}
 .biz .wrapper {
     display: flex;
     justify-content: space-between;
+    /* flex로 정렬하면 좌우요소의 길이가 같아짐.
+    하지만 구현을 위해서 존재하는 만큼의 길이를 부여해줘야함.
+    aling-itmes을 주면 flex로 정렬된 요소들의 길이가 같아지는 현상이 사라짐. */
     align-items: flex-start;
 }
 .biz .subject {
-    position: sticky;
+    position: sticky; /* 나를 감싸는 요소의 길이 내부에서 스크롤 되는 동안 상단에 고정시킴. 
+    감싸는 요소가 모두 스크롤되면 다시 스크롤 됨.
+    대부분 left을 잘 안주고 top만 줌. 고정될 때 상단의 여백이 됨. 
+    단점 : 감싸는 요소 중에서 절대 over-flow:hidden;이 존재하면 안됨.(필요해서 문제임)
+    -- wrap한테 무조건 over-flow:hidden; 줘야함. 그래서 플러그인으로 대체해서 잘 사용함. */
     top: 20px;
+    margin: 45px 0 0 0;
 }
 .biz .subject strong {
     color: #50AE62;
@@ -173,10 +184,170 @@ header .gnb .gnb_wrap ul li:last-child a::after {
     margin: 0 0 0 5px;
 }
 .biz .list {
-    width: 500px;
-    height: 1500px;
-    background-color: #50AE62;
+    width: 832px;
 }
+.biz .list ul {
+    display: flex;
+    flex-wrap: wrap; /* 2줄 허용 */
+    gap: 24px;
+}
+.biz .list ul li {
+    width: 404px;
+    color: #fff;
+    border-radius: 20px;
+    overflow: hidden; /* 넘치는 요소 삭제 */
+}
+.biz .list ul li:nth-child(odd) { /* 홀수 선택자(cf. even=짝수) */
+    transform: translate(0,74px); /* transform은 현재의 위치에서부터 요소를 움직이는데 살짝
+    absolute처럼 다른 요소와 부딪히더라도 배치할 수 있음. 
+    margin은 다른 요소와 중복되면 밀리는 현상 발생 그러나 transform:translate로 움직이는 것은
+    공간 차지 안 함. 
+    기본적으로 모든 여백은 margin이고 이게 안 될 경우 transform:translate을 사용함. */
+}
+.biz .list ul li a {
+    display: block; 
+    height: 308px;
+    position: relative; /* h3 정렬 기준 */
+    text-align: center; 
+}
+.biz .list ul li a .photo::before {
+    display: none;
+    position: absolute; /* a 기준 정렬 */
+    content: ""; /* before을 존재하게 해주는 값 */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(80,174,98,0.8);
+}
+.biz .list ul li a:hover .photo::before {
+    display: block;
+}
+.biz .list ul li a p {
+    display: none;
+    /* hover값을 줬을 때만 보이게 할 것임. */
+    position: absolute; /* a 기준 정렬 */
+    left: 0;
+    bottom: 68px;
+    margin: 0 17px;
+    
+}
+.biz .list ul li a:hover p {
+    display: block;
+}
+.biz .list ul li a .more { /* hover값을 줬을 때만 보이게 할 것임.
+    미리 오버스타일을 모두 갖고 있고, display로 보였다 안보였다 상태 변화만 주는게 좋음 */
+    display: none;
+    position: absolute; /* a 기준 정렬 */
+    /* 가운데 정렬 명령 : left: 50%; transform: translate(-50%,0); */
+    left: 50%;
+    transform: translate(-50%,0);
+    bottom: 29px;
+    padding-right: 11px; /* 오른쪽 여백 부여 - 아이콘 들어가야 해서 */
+}
+.biz .list ul li a:hover .more {
+    display: block;
+}
+.biz .list ul li a .more::after {
+    position: absolute; /* more 기준 정렬 */
+    right: -15px;
+    top: 0;
+    width: 18px;
+    height: 18px;
+    background: url(../imges/biz_more_ico.svg) no-repeat center center / contain;
+    content: ""; /* after을 보이게 하는 값 */
+}
+.biz .list ul li a h3 {
+    position: absolute; /* a 기준 정렬 */
+    left: 0;
+    bottom: 42px;
+    
+    width: 100%; /* 기준 a와 너비가 같아짐 */
+    font-size: 25px;
+}
+.biz .list ul li a:hover h3 {
+    bottom: 120px; /* 오버 시에 적용될 값 */
+}
+@media screen and (max-width:640px) {
+    .biz {
+        margin: 35px 0 0 0;
+    }
+    .biz .wrapper {
+        display: block;
+    }
+    .biz .subject {
+        position: relative; /* sticky 해제 명령 */
+        top: auto; /* relative도 top이 적용되기 때문에 해제 */
+        margin: 0;
+    }
+    .biz .subject h2 {
+        color: #1d1d1d;
+        font-size: 25px;
+        margin: 5px 0 5px 0;
+    }
+    .biz .subject p {
+        margin: 0 0 0 5px;
+    }
+    .biz .list {
+        width: auto; /* 너비 고정값 해제 */
+    }
+    .biz .list ul {
+        gap: 16px;
+    }
+    .biz .list ul li {
+        width: calc(50% - 8px);
+        color: #1d1d1d;
+        overflow: visible; /* overflow 숨김 해제 - 길이 만큼 늘어나게.
+        모바일에서 사이즈가 줄어들면 제목이 2줄이 될 수도 있음. */
+    }
+    .biz .list ul li:nth-child(odd) { /* 홀수 선택자(cf. even=짝수) */
+        transform: translate(0,0);
+    }
+    .biz .list ul li a {
+        height: auto; /*제목이 몇 줄이 될 지 알 수 없기 때문에 높이 제한 두지 않음 */
+    }
+    .biz .list ul li a .photo {
+        height: 115px;
+        overflow: hidden;
+    }
+    .biz .list ul li a .photo img {
+        /* pc/mobile에서 이미지 비율이 다르게 보일 때.
+        img tag로 코딩한 이미지를 정해진 영역에 맞게 사이즈를 리사이즈 해주는 명령 */
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        
+    }
+    .biz .list ul li a:hover .photo::before {
+        display: none; /* 모바일 마우스 오버 없으나, 꾹 누르고 있으면 오버 구현됨.
+        오버를 삭제하거나 제대로 구현되도록 해야 함. */
+    }
+    .biz .list ul li a:hover p {
+        display: none;
+    }
+    .biz .list ul li a:hover .more {
+        display: none;
+    }
+    .biz .list ul li a .more::after {
+        position: absolute; /* more 기준 정렬 */
+        right: -15px;
+        top: 0;
+        width: 18px;
+        height: 18px;
+        background: url(../imges/biz_more_ico.svg) no-repeat center center / contain;
+        content: ""; /* after을 보이게 하는 값 */
+    }
+    .biz .list ul li a h3 {
+        position: relative; /* a absolute 해제 */
+        left: auto;
+        bottom: auto;
+        font-size: 14px;
+    }
+    .biz .list ul li a:hover h3 {
+        bottom: auto; /* 오버 삭제 */
+    }
+}/* biz media */
+
 
 
 footer {
