--- a/samsungscholarship/css/main.css
+++ b/samsungscholarship/css/main.css
@@ -349,6 +349,201 @@ header .gnb .gnb_wrap ul li:last-child a::after {
     }
 }/* biz media */
 
+.news {
+    background-color: #EFEBE0;
+    margin: 204px 0 0 0;
+    padding: 120px 0 161px 0;
+}
+.news .subject strong {
+    color: #50AE62;
+}
+.news .subject h2 {
+    color: #1d1d1d;
+    font-size: 45px;
+    margin: 10px 0 2px 0;
+}
+.news .subject p {
+    margin: 0 0 40px 0;
+}
+.news .list ul {
+    display: flex;
+    justify-content: space-between;
+    
+}
+.news .list ul li a {
+    display: block;
+    width: 395px;
+    border-top: 1px solid #666;
+}
+.news .list ul li h3 {
+    color: #1d1d1d;
+    font-size: 25px;
+    margin: 12px 0 27px;
+    font-weight: 500;
+    /* 1줄 */
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.news .list ul li a p {
+    line-height: 1.3; 
+    height: 5.2em;
+    overflow: hidden;
+}
+.news .list ul li a .date {
+    display: block;
+    margin: 24px 0 0 0;
+}
+.news .list ul li a:hover {
+    color: #50AE62;
+    border-color: #1d1d1d;
+}
+.news .list ul li a:hover h3 {
+    color: #50AE62;
+}
+.news .list ul li a:hover .date {
+    color: #50AE62;
+}
+.news .wrapper {
+    position: relative; /* more 정렬 기준 */
+}
+.news .more {
+    position: absolute; 
+    right: 0;
+    top: 17px;
+    
+}
+.news .more a {
+    display: block;
+    padding: 5px 35px 2px 16px;
+    border-radius: 100px;
+    border: 1px solid #666;
+    margin: 70px 0 0 0;
+    position: relative; /* after 기준 정렬 */
+}
+.news .more a::after {
+    position: absolute; /* more 기준 정렬 */
+    right: 9px;
+    top: 5px;
+    width: 18px;
+    height: 18px;
+    background: url(../imges/news_more_ico.svg) no-repeat center center / contain;
+    content: ""; /* after 존재하게 하는 값 */
+}
+.news .more a:hover { 
+    background-color: #50AE62;
+    border-color: #50AE62;
+    color: #fff;
+}
+.news .more a:hover::after {
+    background-image: url(../imges/news_more_over_ico.svg);
+}
+@media screen and (max-width:640px) {
+    .news {
+        margin: 34px 0 0 0;
+        padding: 42px 0 57px 0;
+    }
+    .news .subject h2 {
+        font-size: 25px;
+        margin: 5px 0 5px 0;
+    }
+    .news .subject p {
+        margin: 0 0 27px 0;
+    }
+    .news .list ul {
+        display: block;
+    }
+    .news .list ul li a {
+        display: block;
+        width: auto; /* 너비 고정 해제 -> 원본 스타일로 : li는 block tag라서 너비가 100%인데 여기에 100%을 주면 margin 등의
+        여백을 줬을 때 사이즈가 늘 수 있음. */
+    }
+    .news .list ul li:last-child a {
+        border-bottom: 1px solid #666;
+    }
+    .news .list ul li h3 {
+        font-size: 16px;
+        margin: 12px 0 7px 0;
+        /* 1줄 */
+        white-space: wrap;
+        overflow: visible;
+        text-overflow: ellipsis;
+    }
+    .news .list ul li a p {
+        height: 2.6em; /*줄 n(2)수 제한 */
+    }
+    .news .list ul li a .date {
+        margin: 10px 0 5px 0;
+        text-align: right;
+    }
+    .news .more {
+        position: relative; 
+        right: auto;
+        top: auto;
+        text-align: center;
+    }
+    .news .more a {
+        display: inline-block;
+        padding: 7px 35px 2px 16px;
+    }
+    .news .more a::after {
+        position: absolute; /* more 기준 정렬 */
+        right: 9px;
+        top: 5px;
+        width: 15px;
+        height: 15px;
+    }
+    .news .more a:hover { 
+        background-color: #50AE62;
+        border-color: #50AE62;
+        color: #fff;
+    }
+    .news .more a:hover::after {
+        background-image: url(../imges/news_more_over_ico.svg);
+    }
+}/* news media */
+
+.webzine .subject strong {
+    display: block;
+    color: #50AE62;
+    margin: 101px 0 0 0;
+}
+.webzine .subject h2 {
+    color: #1d1d1d;
+    font-size: 45px;
+    margin: 11px 0 34px 0;
+}
+.webzine .list ul {
+    display: flex;
+    justify-content: space-between;
+}
+.webzine .list ul li {
+    width: 297px;
+}
+.webzine .list ul li a {
+    display: block;
+    height: 346px;
+    border-radius: 30px;
+    border: 1px solid #666;
+    overflow: hidden;
+}
+/* 게시판에서 이미지를 가져오는 경우, 이미지 사이즈가 다양함. -> 아래는 디자인과 동사이즈로 리사이즈 하는 방법이다.
+1. 이미지를 감싸는 요소가 너비, 높이 값이 있어야 함.
+    overflow: hidden;
+2. 이미지에는 widht:100%, height: 100%, object-fit: cover을 줘야함. */
+.webzine .list ul li a .photo {
+    overflow: hidden;
+    height: 227px; /* block요소이기 때문에 너비는 안줘도 됨. */
+}
+.webzine .list ul li a .photo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* 감싸는 요소에 꽉 맞게 리사이즈 - 위아래/좌우 가운데에 이미지가 정렬됨. */
+}
+.webzine .list ul li a strong {
+    color: #50AE62;
+    font-size: 14px;
+}
 
 
 footer {
